--- a/src/app/pages/issued-certificates/issued-certificates.html
+++ b/src/app/pages/issued-certificates/issued-certificates.html
@@ -1,1 +1,53 @@
-<p>issued-certificates works!</p>
+<div class="relative flex size-full min-h-screen flex-col group/design-root overflow-x-hidden bg-gray-50">
+    <div class="layout-container flex h-full grow flex-col">
+        <app-navbar />
+        <main class="px-4 sm:px-6 md:px-10 lg:px-20 xl:px-40 flex flex-1 justify-center py-8">
+            <div class="layout-content-container flex flex-col max-w-[960px] flex-1 gap-6">
+                <h1 class="text-[var(--text-primary)] tracking-tight text-4xl font-bold leading-tight">All Issued
+                    Certificates
+                </h1>
+                <div class="bg-white rounded-xl shadow-lg overflow-hidden">
+
+
+
+                    <table mat-table [dataSource]="mintedCertificates()" class="mat-elevation-z8">
+
+                        <ng-container matColumnDef="tokenId">
+                            <th mat-header-cell *matHeaderCellDef> Certificate ID </th>
+                            <td mat-cell *matCellDef="let certificate"> {{
+                                certificate.tokenId}} </td>
+                        </ng-container>
+
+
+                        <ng-container matColumnDef="recipient">
+                            <th mat-header-cell *matHeaderCellDef> Recipient Address </th>
+                            <td mat-cell *matCellDef="let certificate">
+                                {{businessService.formatAddress(certificate.recipient)}} </td>
+                        </ng-container>
+
+
+                        <ng-container matColumnDef="blockNumber">
+                            <th mat-header-cell *matHeaderCellDef> Block Number </th>
+                            <td mat-cell *matCellDef="let certificate"> {{certificate.blockNumber}} </td>
+                        </ng-container>
+
+
+                        <ng-container matColumnDef="ipfsHash">
+                            <th mat-header-cell *matHeaderCellDef> IPFS Hash </th>
+                            <td mat-cell *matCellDef="let certificate"> {{certificate.ipfsHash}} </td>
+                        </ng-container>
+
+                        <ng-container matColumnDef="action">
+                            <th mat-header-cell *matHeaderCellDef> Action </th>
+                            <td mat-cell *matCellDef="let certificate"> <button matButton="tonal"
+                                    [routerLink]="['/issued-certificates', certificate.tokenId]">View</button> </td>
+                        </ng-container>
+
+                        <tr mat-header-row *matHeaderRowDef=" displayedColumns()"></tr>
+                        <tr mat-row *matRowDef="let row; columns: displayedColumns();"></tr>
+                    </table>
+                </div>
+            </div>
+        </main>
+    </div>
+</div>
