--- a/src/app/pages/new-certificate/new-certificate.html
+++ b/src/app/pages/new-certificate/new-certificate.html
@@ -6,61 +6,39 @@
                 <h1
                     class="text-[var(--text-primary)] text-2xl sm:text-3xl font-bold leading-tight mb-8 text-center sm:text-left">
                     Create a Single Certificate</h1>
-                <form class="space-y-6">
+                <form class="space-y-6" [formGroup]="certificateForm" (ngSubmit)="submitForm()">
                     <div>
                         <label class="block text-[var(--text-primary)] text-sm font-medium leading-normal pb-2"
                             for="walletAddress">Recipient's Wallet Address</label>
                         <mat-form-field appearance="outline" class="w-full input-container">
-                            <input matInput placeholder="Certificate ID" value="" placeholder="0x..." type="text" />
+                            <input matInput value="" placeholder="0x..." type="text"
+                                formControlName="recipientAddress" />
                         </mat-form-field>
                     </div>
                     <div>
                         <label class="block text-[var(--text-primary)] text-sm font-medium leading-normal pb-2"
                             for="productName">Product Name</label>
                         <mat-form-field appearance="outline" class="w-full input-container">
-                            <input matInput placeholder="Certificate ID" value="" placeholder="Enter product name"
-                                type="text" />
-                        </mat-form-field>
-                    </div>
-                    <div>
-                        <label class="block text-[var(--text-primary)] text-sm font-medium leading-normal pb-2"
-                            for="serialNumber">Serial Number</label>
-                        <mat-form-field appearance="outline" class="w-full input-container">
-                            <input matInput placeholder="Certificate ID" value="" placeholder="Enter serial number"
-                                type="text" />
+                            <input matInput value="" placeholder="Enter product name" type="text"
+                                formControlName="productName" />
                         </mat-form-field>
                     </div>
                     <div>
                         <label class="block text-[var(--text-primary)] text-sm font-medium leading-normal pb-2"
                             for="description">Description</label>
                         <mat-form-field appearance="outline" class="w-full input-container">
-                            <textarea matInput placeholder="Enter product description" rows="4"></textarea>
+                            <textarea matInput placeholder="Enter product description" rows="4"
+                                formControlName="description"></textarea>
                         </mat-form-field>
 
                     </div>
                     <div>
                         <label class="block text-[var(--text-primary)] text-sm font-medium leading-normal pb-2">Product
-                            Image (Optional)</label>
-                        <!-- <div
-                            class="flex flex-col items-center justify-center gap-4 rounded-lg border-2 border-dashed border-[var(--border-color)] px-6 py-10 text-center">
-                            <svg class="text-[var(--text-secondary)]" fill="none" height="48" stroke="currentColor"
-                                stroke-width="1.5" viewBox="0 0 24 24" width="48" xmlns="http://www.w3.org/2000/svg">
-                                <path
-                                    d="M12 16.5V9.75m0 0l3 3m-3-3l-3 3M6.75 19.5a4.5 4.5 0 01-1.41-8.775 5.25 5.25 0 0110.338 0 4.5 4.5 0 01-1.41 8.775H6.75z"
-                                    stroke-linecap="round" stroke-linejoin="round"></path>
-                            </svg>
-                            <p class="text-[var(--text-secondary)] text-sm font-normal leading-normal">
-                                <span
-                                    class="font-semibold text-[var(--primary-color)] cursor-pointer hover:underline">Click
-                                    to upload</span> or drag and drop
-                            </p>
-                            <p class="text-xs text-[var(--text-secondary)]">SVG, PNG, JPG or GIF (MAX. 800x400px)</p>
-                            <input class="sr-only" type="file" />
-                        </div> -->
-                        <app-image-upload class="w-full"></app-image-upload>
+                            Image</label>
+                        <app-image-upload formControlName="imageFile" class="w-full"></app-image-upload>
                     </div>
                     <div class="pt-4">
-                        <button matButton="filled" class="w-full" type="button">
+                        <button matButton="filled" class="w-full" type="submit">
                             Mint Certificate
                         </button>
                     </div>
